Remove not working translation parameter in registration subject line

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -94,5 +94,5 @@ Show comments;Kommentare anzeigen
 Write comment;Kommentar schreiben
 <p>This is the place for a critical examination of scientific papers. The page offers you tools to collaboratively discover, collect and document plagiarism.</p><p>If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>;<p>Wir setzen uns kritisch mit Hochschulschriften auf Basis belastbarer Plagiatsfundstellen auseinander. Dises Seite bietet Möglichkeiten um gemeinschaftlich Plagiate zu suchen, zu sammeln und zu dokumentieren.</p><p>Wenn Du dich gerne beteiligen möchtests, dann <a href="/user/register">registriere</a> dich einfach oder erkunde unsere öffentlichen Bereiche.</p>
 Welcome to %s;Willkommen bei %s
-%1\$s: Registration verification required; %1\$s: Verifizierung der Registrierung erforderlich
+Registration verification required; Verifizierung der Registrierung erforderlich
 Please check your emails to verify your account.;Bitte überprüfe deine Emails um die Registrierung deines Accounts zu verifizieren.
