some bibtex improvements

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -104,3 +104,27 @@ create;erstellen
 Imprint;Impressum
 Contact;Kontakt
 Telephone;Telefon
+Author;Autor
+Year;Jahr
+Month;Monat
+Day;Tag
+Journal;Zeitschrift
+Volume;Jahrgang
+Number;Nummer
+Publisher;Verlag
+Address;Ort
+Series;Reihe
+Edition;Ausgabe
+Booktitle;Sammlung
+Editor;Herausgeber
+Pages;Seiten
+ISBN;ISBN
+ISSN;ISSN
+URL:URL
+Key;Schlüssel
+Note;Anmerkung
+Periodical;Periodikum
+Book;Buch
+Essay;Aufsatzsammlung
+Full;Vollständig
+Bibliography;Literaturverzeichnis
