Set file and case links in activity stream to list views as the best current solution

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -128,3 +128,5 @@ Book;Buch
 Essay;Aufsatzsammlung
 Full;Vollständig
 Bibliography;Literaturverzeichnis
+Make public;Öffentlich verfügbar
+Add to current case;Zum Fall hinzufügen
