--- a/public/js/i18n/en.json
+++ b/public/js/i18n/en.json
@@ -1,9 +1,31 @@
 {
-  "permission": {
-    "create": "create",
-    "read": "read",
-    "update": "update",
-    "delete": "delete",
-    "authorize": "authorize"
-  }
+    "permission": {
+        "create": "create",
+        "read": "read",
+        "update": "update",
+        "delete": "delete",
+        "authorize": "authorize"
+    },
+    "contextmenu": {
+        "tip": {
+            "title": "Tip: Use Contextmenu",
+            "text": "You can mark words with a leftclick and then open a contexmenu on right click."
+        },
+        "google": {
+            "open": "Open Google",
+            "remove": "Remove Google search words",
+            "search": "Search Google for"
+        },
+        "fragment": {
+            "candidate": "Set as candidate of fragmen",
+            "source": "Set as source of fragment",
+            "create": "Create fragment"
+        },
+        "print": "Print page"
+    },
+    "conversation": {
+        "rated": "rated the fragment",
+        "show": "Show conversation",
+        "hide": "Hide conversation"
+    }
 }
